Fix report card title overflow

--- a/app/assets/stylesheets/components/report-card.scss
+++ b/app/assets/stylesheets/components/report-card.scss
@@ -67,6 +67,7 @@
       letter-spacing: 0.5px;
       line-height: 20px;
       height:20px;
+      white-space:nowrap;
       overflow: hidden;
       text-overflow: ellipsis;
     }
